--- a/templates/login.html
+++ b/templates/login.html
@@ -49,7 +49,7 @@
                   <p class="text-muted">
                     <br />
                     <span style="color: rgb(36, 36, 36);">No account?&nbsp;</span>
-                    <span style="text-decoration: underline; color: inherit; background-color: transparent;">Create one</span>
+                    <a href="{% url "signup" %}" style="text-decoration: none; color: inherit; background-color: transparent;">Create one</a>
                     <br /><br />
                   </p>
                 </form>
