--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@ https://templatemo.com/tm-553-xtra-blog
             </li>
             {% if user.is_authenticated %}
               <li class="tm-nav-item">
-                <a href="" class="tm-nav-link">
+                <a href="{% url "profile" %}" class="tm-nav-link">
                   <i class="fas fa-user"></i>
                   Your Profile
                 </a>
