--- a/templates/profile.html
+++ b/templates/profile.html
@@ -159,7 +159,7 @@
                 <div class="d-none d-sm-block topbar-divider"></div>
                 <li class="nav-item dropdown no-arrow">
                   <div class="nav-item dropdown no-arrow">
-                    <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="/static/assets/img/avatars/avatar1.jpeg" /></a>
+                    <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">{{ user.username }}</span><img class="border rounded-circle img-profile" src="/static/assets/img/avatars/avatar1.jpeg" /></a>
                     <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
                       <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
                       <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
@@ -175,7 +175,7 @@
               <div class="col-lg-4">
                 <div class="card mb-3">
                   <div class="card-body text-center shadow">
-                    <img class="rounded-circle mb-3 mt-4" src="/static/assets/img/dogs/image2.jpeg" width="160" height="160" />
+                    <img class="rounded-circle mb-3 mt-4" src="/static/assets/img/dogs/image4.jpeg" width="160" height="160" />
                     <div class="mb-3">
                       <button class="btn btn-primary btn-sm" type="button">Change Photo</button>
                     </div>
@@ -273,24 +273,24 @@
                           <div class="row">
                             <div class="col">
                               <div class="mb-3">
-                                <label class="form-label" for="username"><strong>Username</strong></label><input class="form-control" type="text" id="username" placeholder="user.name" name="username" />
+                                <label class="form-label" for="username"><strong>Username</strong></label><input class="form-control" type="text" id="username" placeholder="{{ user.username }}" name="username" value="{{ user.username }}"  />
                               </div>
                             </div>
                             <div class="col">
                               <div class="mb-3">
-                                <label class="form-label" for="email"><strong>Email Address</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email" />
+                                <label class="form-label" for="email"><strong>Email Address</strong></label><input class="form-control" type="email" id="email" placeholder="user@example.com" name="email" value="{{ user.email }}"/>
                               </div>
                             </div>
                           </div>
                           <div class="row">
                             <div class="col">
                               <div class="mb-3">
-                                <label class="form-label" for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name" />
+                                <label class="form-label" for="first_name"><strong>First Name</strong></label><input class="form-control" type="text" id="first_name" placeholder="John" name="first_name" value="{{ user.first_name }}"/>
                               </div>
                             </div>
                             <div class="col">
                               <div class="mb-3">
-                                <label class="form-label" for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name" />
+                                <label class="form-label" for="last_name"><strong>Last Name</strong></label><input class="form-control" type="text" id="last_name" placeholder="Doe" name="last_name" value="{{ user.last_name }}"/>
                               </div>
                             </div>
                           </div>
