--- a/templates/create-post.html
+++ b/templates/create-post.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="{% url "profile" %}"><i class="fas fa-user"></i><span>Profile</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{% url "create-post" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
+                <a class="nav-link active" href="{% url "post-create" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
               </li>
               {% comment %} <li class="nav-item">
                 <a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a>
@@ -160,7 +160,7 @@
                   <div class="d-none d-sm-block topbar-divider"></div>
                   <li class="nav-item dropdown no-arrow">
                     <div class="nav-item dropdown no-arrow">
-                      <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">{{ user.username }}</span><img class="border rounded-circle img-profile" src="{% if profile.profile_image %}{{ profile.profile_image.url }}{% endif %}" /></a>
+                      <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">{{ user.username }}</span><img class="border rounded-circle img-profile" src="{{ user.get_profile_image }}"/></a>
                       <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
                         {% comment %} <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp; Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a> {% endcomment %}
                         <form method="post" action="{% url "logout" %}">
@@ -175,7 +175,7 @@
               </div>
             </nav>
           <form method="post" enctype="multipart/form-data">
-          {% csrf_token %}
+            {% csrf_token %}
             <div class="container-fluid">
               <h3 class="text-dark mb-4">Create Post</h3>
 
@@ -186,17 +186,17 @@
 
               <div class="mb-3">
                 <label for="content" class="form-label">Content</label>
-                <textarea class="form-control" id="content" rows="3" ></textarea>
+                <textarea class="form-control" id="content" rows="3" name="content"></textarea>
               </div>
 
               <div class="mb-3">
                 <label for="cover_image" class="form-label">Cover image</label>
-                <input class="form-control" type="file" id="cover_image">
+                <input class="form-control" type="file" id="cover_image" >
               </div>
 
               <div class="mb-3">
                 <label for="status" class="form-label">Post status</label>
-                <select class="form-select" aria-label="Post status" id='status'>
+                <select class="form-select" aria-label="Post status" id='status' name="status">
                   <option value="draft" selected>Draft</option>
                   <option value="published">Published</option>
                 </select>
@@ -204,27 +204,35 @@
 
               <div class="mb-3">
                 <label for="category" class="form-label">Category</label>
-                <select class="form-select" aria-label="Post status" id='status'>
+                <select class="form-select" aria-label="Post status" id='category'>
                   <option value="A" selected>A</option>
                   <option value="A">B</option>
                 </select>
               </div>
 
+              <div class="d-grid gap-2">
+              <button class="btn btn-primary" type="submit" >Save</button>
+
+
+              
+          </form>
+
+    </div>
+          </div>
+        </div>
+        <footer class="bg-white sticky-footer">
+          <div class="container my-auto">
+            <div class="text-center my-auto copyright">
+              <span>Copyright © Brand 2025</span>
             </div>
           </div>
-          <footer class="bg-white sticky-footer">
-            <div class="container my-auto">
-              <div class="text-center my-auto copyright">
-                <span>Copyright © Brand 2025</span>
-              </div>
-            </div>
-          </footer>
-        </div>
-        <a class="border rounded d-inline scroll-to-top" href="#page-top">
-          <i class="fas fa-angle-up"></i>
-        </a>
+        </footer>
       </div>
-    </form>
+      <a class="border rounded d-inline scroll-to-top" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/assets/js/bs-init.js"></script>
     <script src="/static/assets/js/theme.js"></script>
