--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,7 +31,7 @@
                 <a class="nav-link active" href="{% url "profile" %}"><i class="fas fa-user"></i><span>Profile</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url "create-post" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
+                <a class="nav-link" href="{% url "post-create" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
               </li>
               {% comment %} <li class="nav-item">
                 <a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a>
