--- a/templates/post.html
+++ b/templates/post.html
@@ -32,10 +32,21 @@ https://templatemo.com/tm-553-xtra-blog
                         <i class="fas fa-home"></i>
                         Blog Home
                     </a></li>
-                    <li class="tm-nav-item active"><a href="post.html" class="tm-nav-link">
-                        <i class="fas fa-pen"></i>
-                        Single Post
-                    </a></li>
+                    {% if user.is_authenticated %}
+                    <li class="tm-nav-item">
+                        <a href="{% url "profile" %}" class="tm-nav-link">
+                        <i class="fas fa-user"></i>
+                        Your Profile
+                        </a>
+                    </li>
+                    {% else %}
+                        <li class="tm-nav-item">
+                        <a href="{% url 'login' %}" class="tm-nav-link">
+                            <i class="fas fa-user"></i>
+                            Log in
+                        </a>
+                    </li>            
+                    {% endif %}
                     <li class="tm-nav-item"><a href="about.html" class="tm-nav-link">
                         <i class="fas fa-users"></i>
                         About Xtra
@@ -82,103 +93,123 @@ https://templatemo.com/tm-553-xtra-blog
                 <div class="col-12">
                     <hr class="tm-hr-primary tm-mb-55">
                     <!-- Video player 1422x800 -->
-                    <video width="954" height="535" controls class="tm-mb-40">
-                        <source src="video/wheat-field.mp4" type="video/mp4">							  
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
+                    <img width="954" height="535" src="{% if post.cover_image %}{{ post.cover_image.url }}{% endif %}">
+               </div>
             </div>
             <div class="row tm-row">
                 <div class="col-lg-8 tm-post-col">
                     <div class="tm-post-full">                    
                         <div class="mb-4">
-                            <h2 class="pt-2 tm-color-primary tm-post-title">Single Post of Xtra Blog HTML Template</h2>
-                            <p class="tm-mb-40">June 16, 2020 posted by Admin Nat</p>
-                            <p>
-                                This is a description of the video post. You can also have an image instead of
-                                the video. You can free download 
-                                <a rel="nofollow" href="https://templatemo.com/tm-553-xtra-blog" target="_blank">Xtra Blog Template</a> 
-                                from TemplateMo website. Phasellus maximus quis est sit amet maximus. Vestibulum vel rutrum
-                                lorem, ac sodales augue. Aliquam erat volutpat. Duis lectus orci, blandit in arcu
-                                est, elementum tincidunt lectus. Praesent vel justo tempor, varius lacus a,
-                        pharetra lacus. </p>
-                            <p>
-                                Duis pretium efficitur nunc. Mauris vehicula nibh nisi. Curabitur gravida neque
-                                dignissim, aliquet nulla sed, condimentum nulla. Pellentesque id venenatis
-                                quam, id cursus velit. Fusce semper tortor ac metus iaculis varius. Praesent
-                                aliquam ex vel lectus ornare tristique. Nunc et eros quis enim feugiat tincidunt
-                                et vitae dui.
+                            <h2 class="pt-2 tm-color-primary tm-post-title">{{ post.title }}</h2>
+                            <p class="tm-mb-40">{{ post.created_at|date:"F d, Y" }} posted by {{ post.author.user }}</p>
+                            <p>v
+                                {{ post.content }}
                             </p>
-                            <span class="d-block text-right tm-color-primary">Creative . Design . Business</span>
+                           
+                            <span class="d-block text-right tm-color-primary">{{ post.category }}</span>
                         </div>
                         
                         <!-- Comments -->
                         <div>
                             <h2 class="tm-color-primary tm-post-title">Comments</h2>
                             <hr class="tm-hr-primary tm-mb-45">
-                            <div class="tm-comment tm-mb-45">
-                                <figure class="tm-comment-figure">
-                                    <img src="/static/img/comment-1.jpg" alt="Image" class="mb-2 rounded-circle img-thumbnail">
-                                    <figcaption class="tm-color-primary text-center">Mark Sonny</figcaption>
-                                </figure>
-                                <div>
-                                    <p>
-                                        Praesent aliquam ex vel lectus ornare tritique. Nunc et eros
-                                        quis enim feugiat tincidunt et vitae dui. Nullam consectetur
-                                        justo ac ex laoreet rhoncus. Nunc id leo pretium, faucibus 
-                                        sapien vel, euismod turpis.
-                                    </p>
-                                    <div class="d-flex justify-content-between">
-                                        <a href="#" class="tm-color-primary">REPLY</a>
-                                        <span class="tm-color-primary">June 14, 2020</span>
-                                    </div>                                                 
-                                </div>                                
-                            </div>
-                            <div class="tm-comment-reply tm-mb-45">
-                                <hr>
-                                <div class="tm-comment">
-                                    <figure class="tm-comment-figure">
-                                        <img src="/static/img/comment-2.jpg" alt="Image" class="mb-2 rounded-circle img-thumbnail">
-                                        <figcaption class="tm-color-primary text-center">Jewel Soft</figcaption>    
-                                    </figure>
-                                    <p>
-                                        Nunc et eros quis enim feugiat tincidunt et vitae dui.
-                                        Nullam consectetur justo ac ex laoreet rhoncus. Nunc
-                                        id leo pretium, faucibus sapien vel, euismod turpis.
-                                    </p>
-                                </div>                                
-                                <span class="d-block text-right tm-color-primary">June 21, 2020</span>
-                            </div>
-                            <form action="" class="mb-5 tm-comment-form">
+
+                            {% for comment in post.comments.all %}
+                                {% if comment.is_parent %}
+                                    <div class="tm-comment tm-mb-45">
+                                        <figure class="tm-comment-figure">
+                                            {% if comment.user.authorprofile.profile_image %}
+                                                <img src="{{ comment.user.authorprofile.profile_image.url }}" width="100" height="100" alt="Image" class="mb-2 rounded-circle img-thumbnail">
+                                            {% else %}
+                                                <img src="/static/img/comment-1.jpg" alt="Image" class="mb-2 rounded-circle img-thumbnail">
+                                            {% endif %}
+                                            <figcaption class="tm-color-primary text-center">{{ comment.user.username }}</figcaption>
+                                        </figure>
+
+                                        <div>
+                                            <p>{{ comment.content }}</p>
+                                                <div>
+                                                <span class="tm-color-primary">{{ comment.created_at|date:"F d, Y" }}</span>
+                                                </div>
+                                                <div>
+                                                <a href="#" class="tm-color-primary reply-btn" data-parent="{{ comment.id }}">REPLY</a>
+                                                </div>
+                                        </div>
+                                    </div>
+
+                                    {# Replies #}
+                                    {% for reply in comment.get_replies %}
+                                        <div class="tm-comment-reply tm-mb-45" style="margin-left: 40px;">
+                                            <hr>
+                                            <div class="tm-comment">
+                                                <figure class="tm-comment-figure">
+                                                    {% if reply.user.authorprofile.profile_image %}
+                                                        <img src="{{ reply.user.authorprofile.profile_image.url }}" width="50" height="50" alt="Image" class="mb-2 rounded-circle img-thumbnail">
+                                                    {% else %}
+                                                        <img src="/static/img/comment-2.jpg" alt="Image" class="mb-2 rounded-circle img-thumbnail">
+                                                    {% endif %}
+                                                    <figcaption class="tm-color-primary text-center">{{ reply.user.username }}</figcaption>    
+                                                </figure>
+                                                <div >
+                                                    <p>{{ reply.content }}</p>
+
+                                                        <div>
+                                                        <span class="tm-color-primary">{{ comment.created_at|date:"F d, Y" }}</span>
+                                                        </div>
+                                                        <div>
+                                                        <a href="#" class="tm-color-primary reply-btn" data-parent="{{ comment.id }}">REPLY</a>
+                                                        </div>
+                                                </div>
+                                            </div>                                
+                                            {% comment %} <span class="d-block text-right tm-color-primary">{{ reply.created_at|date:"F d, Y" }}</span> {% endcomment %}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+
+                            <form method="POST" class="mb-5 tm-comment-form">
+                                {% csrf_token %}
                                 <h2 class="tm-color-primary tm-post-title mb-4">Your comment</h2>
+
+                                <!-- Hidden input for replies -->
+                                <input type="hidden" name="parent_id" id="parent_id" value="">
+
                                 <div class="mb-4">
-                                    <input class="form-control" name="name" type="text">
+                                    <textarea class="form-control" name="message" rows="6" placeholder="Write your comment here..."></textarea>
                                 </div>
-                                <div class="mb-4">
-                                    <input class="form-control" name="email" type="text">
-                                </div>
-                                <div class="mb-4">
-                                    <textarea class="form-control" name="message" rows="6"></textarea>
-                                </div>
+
                                 <div class="text-right">
-                                    <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>                        
+                                    <button type="submit" class="tm-btn tm-btn-primary tm-btn-small">Submit</button>                        
                                 </div>                                
-                            </form>                          
+                            </form>
                         </div>
+
+                        <script>
+                            document.querySelectorAll('.reply-btn').forEach(btn => {
+                            btn.addEventListener('click', e => {
+                                e.preventDefault();
+                                const parentId = btn.dataset.parent;
+                                document.getElementById('parent_id').value = parentId;
+
+                                // Optional: scroll to form and highlight it
+                                const form = document.querySelector('.tm-comment-form');
+                                form.scrollIntoView({ behavior: 'smooth' });
+                                form.querySelector('textarea[name="message"]').focus();
+                            });
+                            });
+                        </script>
+
                     </div>
                 </div>
                 <aside class="col-lg-4 tm-aside-col">
                     <div class="tm-post-sidebar">
                         <hr class="mb-3 tm-hr-primary">
                         <h2 class="mb-4 tm-post-title tm-color-primary">Categories</h2>
-                        <ul class="tm-mb-75 pl-5 tm-category-list">
-                            <li><a href="#" class="tm-color-primary">Visual Designs</a></li>
-                            <li><a href="#" class="tm-color-primary">Travel Events</a></li>
-                            <li><a href="#" class="tm-color-primary">Web Development</a></li>
-                            <li><a href="#" class="tm-color-primary">Video and Audio</a></li>
-                            <li><a href="#" class="tm-color-primary">Etiam auctor ac arcu</a></li>
-                            <li><a href="#" class="tm-color-primary">Sed im justo diam</a></li>
-                        </ul>
+                            <ul class="tm-mb-75 pl-5 tm-category-list">
+                                {% for category in categories %}
+                                    <li><a href="{% url 'home' %}?category={{ category.id }}" class="tm-color-primary">{{ category.name }}</a></li>
+                                {% endfor %}
+                            </ul>
                         <hr class="mb-3 tm-hr-primary">
                         <h2 class="tm-mb-40 tm-post-title tm-color-primary">Related Posts</h2>
                         <a href="#" class="d-block tm-mb-40">
