--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,6 +33,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url "post-create" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "post-list" %}"><i class="far fa-user-circle"></i><span>All Posts</span></a>
+              </li>
               {% comment %} <li class="nav-item">
                 <a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a>
               </li>
