Refactor ReaderProfile and Post models: remove favorite posts and like/dislike fields; enhance search functionality in views and templates.

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@ https://templatemo.com/tm-553-xtra-blog
         <div class="row tm-row">
           <div class="col-12">
             <form method="GET" class="form-inline tm-mb-80 tm-search-form">
-              <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search" />
+              <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search" value="{{ search_query }}" />
               <button class="tm-search-button" type="submit"><i class="fas fa-search tm-search-icon" aria-hidden="true"></i></button>
             </form>
           </div>
