--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,12 +30,14 @@
               <li class="nav-item">
                 <a class="nav-link active" href="{% url "profile" %}"><i class="fas fa-user"></i><span>Profile</span></a>
               </li>
+              {% if user.role == 'author' %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url "post-create" %}"><i class="fas fa-table"></i><span>Create Article</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url "post-list" %}"><i class="far fa-user-circle"></i><span>All Posts</span></a>
               </li>
+              {% endif %}
               {% comment %} <li class="nav-item">
                 <a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a>
               </li>
@@ -203,7 +205,7 @@
                         <h4 class="small fw-bold">Server migration<span class="float-end">20%</span></h4>
                       </div>
                     {% else %}
-                      <div class="card-header py-3">
+                      {% comment %} <div class="card-header py-3">
                         <h6 class="text-primary fw-bold m-0">Projects</h6>
                       </div>
                       <div class="card-body">
@@ -237,7 +239,7 @@
                             <span class="visually-hidden">100%</span>
                           </div>
                         </div>
-                      </div>
+                      </div> {% endcomment %}
                     {% endif %}
                   </div>
                 </div>
