--- a/templates/profile.html
+++ b/templates/profile.html
@@ -198,12 +198,12 @@
                   </div>
                   <div class="card shadow mb-4">
                     {% if user_type == 'reader' %}
-                      <div class="card-header py-3">
+                      {% comment %} <div class="card-header py-3">
                         <h6 class="text-primary fw-bold m-0">Favorite Posts</h6>
                       </div>
                       <div class="card-body">
                         <h4 class="small fw-bold">Server migration<span class="float-end">20%</span></h4>
-                      </div>
+                      </div> {% endcomment %}
                     {% else %}
                       {% comment %} <div class="card-header py-3">
                         <h6 class="text-primary fw-bold m-0">Projects</h6>
@@ -327,12 +327,12 @@
                           <p class="text-primary m-0 fw-bold">Other Settings</p>
                         </div>
                         {% if user_type == 'reader' %}
-                          <div class="card-body">
+                          {% comment %} <div class="card-body">
                             <div class="mb-3">
                               <label class="form-label" for="address"><strong>Subscribe newsletter</strong></label>
                               <input class="form-check-input" type="checkbox" id="address" placeholder="Sunset Blvd, 38" name="address" value="{{ profile.subscribed }}" />
                             </div>
-                          </div>
+                          </div> {% endcomment %}
                         {% else %}
                           <div class="card-body">
                             <div class="mb-3">
